# fastmango

./: .gitignore  .pre-commit-config.yaml  GITHUB_ISSUE_PLAIN.txt  README.md  alembic.ini  debug_admin.py  demo_admin.py  fastmango_dev.db  mkdocs.yml  pr_description.md  pyproject.toml  pytest.ini  setup_admin_tests.py  test_admin.py  test_admin_app.py  test_admin_functional.py  test_admin_simple.py  test_basic.py
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3b545b147040_create_user_table.py
docs/: ARCHITECTURE.md  CLI_DESIGN.md  CONSOLIDATED_ANALYSIS.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_ROADMAP.md  GITHUB_ISSUES.md  MCP_INTEGRATION.md  PROJECT_VISION.md  README.md  ROADMAP.md  schema_docs.json  schema_docs.md
docs/analysis/: ANTHROPIC_MCP_ANALYSIS.md  FASTMANGO_MCP_STRATEGY.md  FASTMCP_2_ANALYSIS.md  FASTMCP_PAIN_POINTS_ANALYSIS.md  FJANGO_MCP_STRATEGY.md  FRAMEWORK_COMPARISON.md  GEMINI_ANALYSIS_INSTRUCTIONS.md  GEMINI_FOLLOWUP_QUESTIONS.md  README.md
docs/contributing/: architecture.md  guidelines.md  setup.md
docs/getting-started/: first-project.md  installation.md  quick-start.md
docs/guides/: deployment.md  llm-integration.md  mcp-tools.md  web-apis.md
docs/reference/: api.md  cli.md  configuration.md
examples/mcp_demo/: main.py
my-test-project/: main.py  pyproject.toml
src/fastmango/: __init__.py  app.py  models.py
src/fastmango/admin/: __init__.py  base.py  views.py
src/fastmango/cli/: admin.py  db.py  main.py  mcp.py  new.py  run.py
src/fastmango/db/: __init__.py  migration_utils.py  schema_docs.py
src/fastmango/mcp/: __init__.py  config.py  decorators.py  server.py
src/fastmango/template/basic/: main.py.jinja  pyproject.toml.jinja
src/fjango/: __init__.py  main.py
src/fjango/template/: aerich.ini.jinja  manage.py.jinja  pyproject.toml.jinja
src/fjango/template/app/: main.py.jinja
src/fjango/template/app/core/: config.py.jinja  db.py.jinja
src/fjango/template/app/models/: __init__.py  user_model.py.jinja
test-project/: .gitignore  main.py  pyproject.toml
tests/: conftest.py  test_app.py  test_basic.py
tests/helpers/: test_utils.py
tests/integration/: test_admin_integration.py
tests/unit/: test_admin.py  test_cli.py  test_models.py
