[project]
name = "fastmango"
version = "0.1.0"
description = "AI-first web framework combining FastAPI + FastMCP + Django patterns for unified web, LLM, and MCP development."
readme = "README.md"
authors = [
    { name = "StatPan", email = "statpan@naver.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.8.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqladmin>=0.21.0",
    "sqlmodel>=0.0.24",
    "typer>=0.17.3",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.7.2",
    "mypy>=1.11.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
fastmango = "fastmango:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmango"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
show_error_codes = true
exclude = ["src/fastmango/template/"]

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_return_any = false
warn_unused_configs = false
warn_redundant_casts = false
warn_unused_ignores = false
pretty = false
show_error_codes = false

[tool.black]
line-length = 120
target-version = ['py312']
include = '''\.pyi?$'''
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
